drag and drop, validation